--- a/app/src/main/res/layout/artist_row.xml
+++ b/app/src/main/res/layout/artist_row.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:padding="@dimen/artist_row_margin">
 
     <ImageView
@@ -16,7 +15,26 @@
         android:id="@+id/list_row_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_toEndOf="@+id/list_row_image"
+        android:layout_toRightOf="@+id/list_row_image"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/list_row_loading_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/loading"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/list_row_loading_text"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateOnly="true" />
+
+</RelativeLayout>
