--- a/app/src/main/res/layout/activity_artist_tracks.xml
+++ b/app/src/main/res/layout/activity_artist_tracks.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="com.spotify.gil.spotifystreamer.fragment.MainActivityFragment"
+    android:id="@+id/fragment_artist"
+    android:name="com.spotify.gil.spotifystreamer.fragment.ArtistTracksFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout="@layout/fragment_main" />
+    tools:layout="@layout/fragment_artist" />
