--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,5 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/player_fragment"
-    android:name="com.spotify.gil.spotifystreamer.fragment.PlayerActivityFragment"
-    tools:layout="@layout/fragment_player" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:name="com.spotify.gil.spotifystreamer.fragment.PlayerFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout="@layout/fragment_player" />
