--- a/app/src/main/res/layout-sw600dp/activity_artist_search.xml
+++ b/app/src/main/res/layout-sw600dp/activity_artist_search.xml
@@ -8,24 +8,18 @@
     android:showDividers="middle"
     tools:context="com.spotify.gil.spotifystreamer.activity.ArtistListActivity">
 
-    <!--
-    This layout is a two-pane layout for the Artists
-    master/detail flow.
-    
-    -->
-
     <fragment
         android:id="@+id/artist_list"
         android:name="com.spotify.gil.spotifystreamer.fragment.ArtistListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="@integer/main_window_master_view_weight"
         tools:layout="@layout/fragment_main" />
 
     <FrameLayout
         android:id="@+id/artist_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="@integer/main_window_detail_view_weight" />
 
 </LinearLayout>
