--- a/app/src/main/res/layout/activity_artist_tracks.xml
+++ b/app/src/main/res/layout/activity_artist_tracks.xml
@@ -4,4 +4,7 @@
     android:name="com.spotify.gil.spotifystreamer.fragment.ArtistTracksFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:layout="@layout/fragment_artist" />
