--- a/app/src/main/res/layout/artist_row.xml
+++ b/app/src/main/res/layout/artist_row.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/track_row_background"
     android:padding="@dimen/artist_row_margin">
 
     <ImageView
