--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,17 @@
 
     <item
         android:id="@+id/action_player"
-        android:icon="@drawable/ic_play_arrow_black_48dp"
+        android:icon="@drawable/ic_play_box_outline_white_48dp"
         android:orderInCategory="1"
         android:title="@string/title_activity_player"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        android:icon="@drawable/ic_share_variant_white_48dp"
+        android:orderInCategory="2"
+        android:title="@string/share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="ifRoom" />
 
     <item
